# browser-assistant

./: .dockerignore  .env.example  .gitignore  DOCS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
docker/: entrypoint.sh  supervisord.conf
prompts/: extractor.md  system.md
scripts/: smoke_browser.py
src/agent/: config.py  core.py  events.py
src/agent/browser/: controller.py  observe.py  telemetry.py
src/agent/context/: manager.py
src/agent/io/: channel.py  web_channel.py
src/agent/llm/: anthropic_client.py  base.py  openai_client.py  types.py
src/agent/tools/: extract.py  policy.py  registry.py  schemas.py
src/cli/: app.py  login.py
src/web/: server.py
src/web/static/: app.js  index.html  style.css
tests/: test_context_manager.py  test_cost_estimation.py  test_extract_chunking.py  test_openai_adapter.py  test_repeat_detector.py  test_telemetry.py  test_tool_registry.py  test_web_channel.py
