[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "browser-assistant"
version = "0.1.0"
description = "Autonomous AI agent that drives a real browser via accessibility-tree observation"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.48,<2.0",
    "anthropic>=0.39,<1.0",
    "openai>=1.50,<2.0",
    "rich>=13.7",
    "click>=8.1",
    "python-dotenv>=1.0",
    "pydantic>=2.5,<3.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "websockets>=13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[project.scripts]
agent = "agent.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agent", "src/cli", "src/web"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
